added validation and err handling
