# controllers/theme.js
@@ -1,21 +1,37 @@
 const mongodb = require('../db/connect');
 
-const getTheme = async(req, res) => {
-	const themeName = req.params.themeName;
-  const result = await mongodb.getDb().db('portfolioproject').collection('themes').find(themeName);
+
+const getAll = async(req, res) => {
+  const result = await mongodb.getDb().db('portfolioproject').collection('themes').find();
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists);
   });
 };
 
-// const getAll = async(req, res) => {
-//   const result = await mongodb.getDb().db('portfolioproject').collection('themes').find();
-//   result.toArray().then((lists) => {
-//     res.setHeader('Content-Type', 'application/json');
-//     res.status(200).json(lists);
-//   });
+// const getTheme = async(req, res) => {
+// 	const themeName = req.params.themeName;
+// 	const result = await mongodb.getDb().db('portfolioproject').collection('themes').find(themeName);
+// 	result.toArray().then((lists) => {
+// 		res.setHeader('Content-Type', 'application/json');
+// 		res.status(200).json(lists[0]);
+// 	});
 // };
+
+const createTheme = async(req, res) => {
+  const theme = {
+    themeName: req.body.themeName,
+    fontSize: req.body.fontSize,
+    fontColor: req.body.fontColor,
+    backgroundColor: req.body.backgroundColor
+  };
+  const response = await mongodb.getDb().db('portfolioproject').collection('themes').insertOne(theme);
+  if (response.acknowledged) {
+    res.status(201).json(response);
+  } else {
+    res.status(500).json(response.error || 'An error occured while creating the themes.');
+  }
+}
 
 // const getSingle = async(req, res) => {
 //   const userId = new ObjectId(req.params.id);
@@ -26,26 +42,11 @@ const getTheme = async(req, res) => {
 //   }) 
 // }
 
-// const createTheme = async(req, res) => {
-//   const theme = {
-//     themeName: req.body.themeName,
-//     fontFamily: req.body.fontFamily,
-//     fontColor: req.body.fontColor,
-//     backgroundColor: req.body.backgroundColor
-//   };
-//   const response = await mongodb.getDb().db('portfolioproject').collection('themes').insertOne(theme);
-//   if (response.acknowledged) {
-//     res.status(201).json(response);
-//   } else {
-//     res.status(500).json(response.error || 'An error occured while creating the themes.');
-//   }
-// }
-
 // const updateTheme = async(req, res) => {
 // 	const userId = new ObjectId(req.params.id);
 //   const theme = {
 //     themeName: req.body.themeName,
-//     fontFamily: req.body.fontFamily,
+//     fontSize: req.body.fontSize,
 //     fontColor: req.body.fontColor,
 //     backgroundColor: req.body.backgroundColor
 //   };
@@ -69,4 +70,4 @@ const getTheme = async(req, res) => {
 //   }
 // }
 // module.exports = {getAll, getSingle, createTheme, updateTheme, deleteTheme};
-module.exports = {getTheme}
+module.exports = {createTheme, getAll}
