# routes/theme.js
@@ -3,13 +3,13 @@ const router = express.Router();
 
 const themeController = require('../controllers/theme');
 
-router.get('/:themeName', themeController.getTheme);
+// router.get('/:themeName', themeController.getTheme);
 
-// router.get('/', themeController.getAll);
+router.get('/', themeController.getAll);
 
 // router.get('/:id', themeController.getSingle);
 
-// router.post('/', themeController.createTheme);
+router.post('/', themeController.createTheme);
 
 // router.put('/:id', themeController.updateTheme);
 
